fixed styling on chart and made entry form fixed. charts are aligned side by side

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -5,7 +5,7 @@ body{
 #root {
   min-height: 100vh;
   width: 100vw;
-  background-image: url('./images/bgBookMaster.jpg');
+  background-image: url('./images/SolidGray.jpg');
   background-size: cover;
   font-family: 'Cardo', serif;
 
@@ -52,17 +52,17 @@ body{
 
 .table{
   width: 60%;
-  display: inline-block;
+  display: inline-table;
   margin-top: 3%;
   margin-left: 2%;
 }
 
 .form-container{
   width: 26%;
-  position: relative;
+  position: fixed;
   display: inline-block;
-  margin-left: 7%;
-  margin-top: 4%;
+  top: 20%;
+  right: 5%
 }
 
 .form{
